# VDS

./: .gitignore  CMakeLists.txt  LQR  LQR.cpp  PID  PID.cpp  Readme.md  Vehicle.h  build_command.txt  command_line.txt
CodeTest/: LQR.cpp
Docs/: build_command.txt  command_line.txt  cpp_reference.md
autodriving/: CMakeLists.txt
autodriving/src/: msg_subpub.cpp
bag/rosbag2_2021_10_27-22_21_44/: metadata.yaml  rosbag2_2021_10_27-22_21_44_0.db3
chassis_controller/: CMakeLists.txt  package.xml
chassis_controller/include/chassis_controller/: chassis_controller.hpp
chassis_controller/src/: chassis_controller.cpp
chassiscontroller/: CMakeLists.txt
chassiscontroller/include/chassis_controller/: chassis_controller.hpp
chassiscontroller/src/: chassis_controller.cpp
icc/: CMakeLists.txt  package.xml
icc/include/icc/: chassis_controller.hpp
icc/src/: chassis_controller.cpp  controller_node.cpp  icc.cpp  pub.cpp  sub.cpp
install/: local_setup.sh  setup.sh
install/autodriving/share/ament_index/resource_index/parent_prefix_path/: autodriving
install/autodriving/share/autodriving/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/chassis_controller/share/chassis_controller/: local_setup.sh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/icc/share/icc/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/icc/share/icc/cmake/: iccConfig.cmake
log/: latest_build
maps/matlab/: reference_generator.m
maps/pointmap/: point.csv
x_chassis_controller/: CMakeLists.txt  package.xml
x_chassis_controller/src/: x_chassis_controller.cpp
xcontrol/: CMakeLists.txt  package.xml
xcontrol/include/xcontrol/: controller.hpp  publisher.hpp  subscriber.hpp
xcontrol/src/: controller.cpp  publisher.cpp  subscriber.cpp
